# foodie

./: .env  .env.local  .gitignore  CHATBOT_SETUP.md  README.md  pyproject.toml  run.py  streamlit_app_old.py
src/foodie/: api.py
src/foodie/chatbot/: __init__.py  assistant.py  chat_interface.py  openrouter_client.py
src/foodie/logic/: adaptive_service.py  kalman_filter_model.py  models.py  models_old.py  tdee_logic.py
src/foodie/pages/: add_food.py  performance.py  streamlit_app.py  visualizations.py
